[package]
name = "my-ssh"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-ssh2-lite = { version = "*", features = ["tokio"] }
tokio = { version = "*", features = ["full"] }
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }
futures = "*"
ssh2 = "*"
serde = "*"
lazy_static = "*"
